sm/sm-my-community/main/default/objects/CartItem__c/CartItem__c.object-meta.xml
<CustomObject>
    <label>Cart Item</label>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Cart Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cart Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>