sm/sm-my-community/main/default/objects/CartItem__c/fields/PricebookEntryId__c.field-meta.xml
<CustomField>
    <fullName>PricebookEntryId__c</fullName>
    <label>PricebookEntryId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>