sm/sm-my-community/main/default/objects/CartItem__c/fields/SellingModelType__c.field-meta.xml
<CustomField>
    <fullName>SellingModelType__c</fullName>
    <label>Selling Model Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>Evergreen</fullName>
            </value>
            <value>
                <fullName>TermDefined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>